--- a/markup/static/less/libraries/components/section.less
+++ b/markup/static/less/libraries/components/section.less
@@ -21,87 +21,100 @@
 // Variables
 // ========================================================================
 
-@section-padding-vertical:                        @global-medium-margin;
-@section-padding-vertical-m:                      75px;
+@section-padding-vertical: @global-medium-margin;
+@section-padding-vertical-m: 75px;
 
-@section-xsmall-padding-vertical:                 @global-margin;
+@section-xsmall-padding-vertical: @global-margin;
 
-@section-small-padding-vertical:                  @global-medium-margin;
+@section-small-padding-vertical: @global-medium-margin;
 
-@section-large-padding-vertical:                  @global-large-margin;
-@section-large-padding-vertical-m:                80px;
+@section-large-padding-vertical: @global-large-margin;
+@section-large-padding-vertical-m: 80px;
 
-@section-xlarge-padding-vertical:                 @global-xlarge-margin;
-@section-xlarge-padding-vertical-m:               120px;
+@section-xlarge-padding-vertical: @global-xlarge-margin;
+@section-xlarge-padding-vertical-m: 120px;
 
-@section-default-background:                      @global-background;
+@section-default-background: @global-background;
 
-@section-muted-background:                        @global-muted-background;
+@section-muted-background: @global-muted-background;
 
-@section-primary-background:                      @global-primary-background;
-@section-primary-color-mode:                      light;
+@section-primary-background: @global-primary-background;
+@section-primary-color-mode: light;
 
-@section-secondary-background:                    @global-secondary-background;
-@section-secondary-color-mode:                    light;
+@section-secondary-background: @global-secondary-background;
+@section-secondary-color-mode: light;
 
 
 // Hooks
 // ========================================================================
 
 .hook-section() {
-  position: relative;
-  
-  &-background,
-  &-overlay,
-  &-decor {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-  }
-
-  &-decor-bottom-right {
-    top: auto;
-    left: auto;
-  }
-
-  &-decor-bottom-outer {
-    top: auto;
-    bottom: -100px;
-  }
-
-  &-decor {
-    svg {
-      width: auto;
-      height: auto;
-    }
-  }
-
-  &-overlay {
-    opacity: 0.5;
-    pointer-events: none;
-  }
-
-  &-foreground {
     position: relative;
-    min-height: inherit;
 
-    .uk-container {
-      flex-grow: 1;
+    &-background,
+    &-overlay,
+    &-decor {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
     }
-  }
+
+    &-decor-bottom-right {
+        top: auto;
+        left: auto;
+    }
+
+    &-decor-bottom-outer {
+        top: auto;
+        bottom: -100px;
+    }
+
+    &-decor {
+        svg {
+            width: auto;
+            height: auto;
+        }
+    }
+
+    &-overlay {
+        opacity: 0.5;
+        pointer-events: none;
+    }
+
+    &-foreground {
+        position: relative;
+        min-height: inherit;
+
+        .uk-container {
+            flex-grow: 1;
+        }
+    }
 }
+
 .hook-section-default() {}
+
 .hook-section-muted() {}
+
 .hook-section-secondary() {}
+
 .hook-section-primary() {}
+
 .hook-section-overlap() {}
+
 .hook-section-misc() {
-  @media (max-width: @breakpoint-xsmall-max) {
-    .uk-section-xlarge {
-      padding-top: 90px;
-      padding-bottom: 90px;
+    @media (max-width: @breakpoint-xsmall-max) {
+        .uk-section-xlarge {
+            padding-top: 90px;
+            padding-bottom: 90px;
+        }
     }
-  }
+}
+
+.uk-section-corporate {
+    .uk-section-background-decore {
+        right: 0;
+        left: auto;
+    }
 }
