--- a/markup/static/less/libraries/modules/contact.less
+++ b/markup/static/less/libraries/modules/contact.less
@@ -1,189 +1,209 @@
-.hook-card-misc() {
-}
+.hook-card-misc() {}
 
 .hook-section-misc() {
-	.uk-hero-contacts-map {
-		.uk-hero-foreground {
-			pointer-events: none;
-			 .uk-hero-header,
-			 .uk-hero-body .uk-container {
-				 pointer-events: auto;
-			 }
-		}
-		.uk-hero-background {
-			top: 70px;
-		}
-		.uk-heading {
-			margin-top: 6%;
-		}
-	}
-	.uk-hero-contacts {
-		.uk-hero-foreground {
-			@media (min-width: @breakpoint-medium) {
-				min-height: 640px;
-			}
-		}
+    .uk-hero-contacts-map {
+        .uk-hero-foreground {
+            pointer-events: none;
 
-		.uk-section-background-decore {
-			left: auto;
-			bottom: auto;
-			top: 40%;
-			right: 3%;
-			@media (min-width: @breakpoint-medium) {
-				top: 65%;
-			}
-		}
-		
-		.uk-hero-overlay {
-			opacity: 1;
-		}
+            .uk-hero-header,
+            .uk-hero-body .uk-container {
+                pointer-events: auto;
+            }
+        }
 
-		.uk-col-contacts {
-			.uk-contact-title {
-				color: @global-color;
-			}
-			.uk-phone-block, .uk-phone-holder, .uk-contact-block {
-				border-bottom: none;
-				margin-bottom: 0;
-			}
-		}
-		
-	}
-	.uk-section-contacts {
-		.uk-form-contact {
-			textarea {
-				resize: none;
-				height: 174px;
-			}
-		}
-		.uk-col-title {
-			font-weight: 200;
-			margin-bottom: 30px;
-		}
-		
-	}
+        .uk-hero-background {
+            top: 70px;
+        }
 
-	.uk-section-shopping-map {
-		.uk-section-map-country {
-			.uk-section-background {
-				
-				@media (min-width: @breakpoint-small) {
-					right: 47%;
-					left: -47%;
-					top: 0;
-				}
+        .uk-heading {
+            margin-top: 6%;
+        }
+    }
 
-				@media (min-width: @breakpoint-medium) {
-					right: 40%;
-					left: -40%;
-				}
+    .uk-hero-contacts {
+        .uk-hero-foreground {
+            @media (min-width: @breakpoint-medium) {
+                min-height: 640px;
+            }
+        }
 
-				@media (min-width: 1450px) {
-					right: 25%;
-					left: -25%;
-				}
-				@media (min-width: @breakpoint-xlarge) {
-					right: 10%;
-					left: -10%;
-				}
-			}
-			.uk-section-foreground {
-				margin-left: auto;
-				pointer-events: auto;
-			}
-			.uk-sity-shops-block {
-				.uk-sity-name {
-					margin-bottom: 10px;
-				}
-				.uk-shops-list {
-					list-style: none;
-					padding-left: 0;
-					font-size: 14px;
-					margin-top: 0;
+        .uk-section-background-decore {
+            left: auto;
+            bottom: auto;
+            top: 40%;
+            right: 3%;
 
-					a {
-						&:hover {
-							text-decoration: none;
-						}
-					}
-				}
-			}
-		}
-	}
+            @media (min-width: @breakpoint-medium) {
+                top: 65%;
+            }
+        }
+
+        .uk-hero-overlay {
+            opacity: 1;
+        }
+
+        .uk-col-contacts {
+            .uk-contact-title {
+                color: @global-color;
+            }
+
+            .uk-phone-block,
+            .uk-phone-holder,
+            .uk-contact-block {
+                border-bottom: none;
+                margin-bottom: 0;
+            }
+        }
+
+    }
+
+    .uk-section-contacts {
+        .uk-form-contact {
+            textarea {
+                resize: none;
+                height: 174px;
+            }
+        }
+
+        .uk-col-title {
+            font-weight: 200;
+            margin-bottom: 30px;
+        }
+
+    }
+
+    .uk-section-shopping-map {
+        .uk-section-map-country {
+            .uk-section-background {
+
+                @media (min-width: @breakpoint-small) {
+                    right: 47%;
+                    left: -47%;
+                    top: 0;
+                }
+
+                @media (min-width: @breakpoint-medium) {
+                    right: 40%;
+                    left: -40%;
+                }
+
+                @media (min-width: 1450px) {
+                    right: 25%;
+                    left: -25%;
+                }
+
+                @media (min-width: @breakpoint-xlarge) {
+                    right: 10%;
+                    left: -10%;
+                }
+            }
+
+            .uk-section-foreground {
+                margin-left: auto;
+                pointer-events: auto;
+            }
+
+            .uk-sity-shops-block {
+                .uk-sity-name {
+                    margin-bottom: 10px;
+                }
+
+                .uk-shops-list {
+                    list-style: none;
+                    padding-left: 0;
+                    font-size: 14px;
+                    margin-top: 0;
+
+                    a {
+                        &:hover {
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 .hook-grid-misc() {
-	.uk-col-contacts {
-			font-size: 14px;
+    .uk-col-contacts {
+        font-size: 14px;
 
-		.uk-contact-title {
-				font-size: 14px;
-				color: @global-muted-color;
-				margin: 15px 0 0;
-				font-weight: 300;
-		}
+        .uk-contact-title {
+            font-size: 14px;
+            color: @global-muted-color;
+            margin: 15px 0 0;
+            font-weight: 300;
+        }
 
-		.uk-phone-holder {
-				border-bottom: 3px solid @global-border;
-				margin-bottom: 40px;
+        .uk-contact-value {
+            color: inherit;
+            font-size: 16px;
+        }
 
-				@media (max-width: @breakpoint-xsmall-max) {
-						margin-bottom: 20px;
-				}
-		}
+        .uk-phone-holder {
+            border-bottom: 3px solid @global-border;
+            margin-bottom: 40px;
 
-		.uk-phone-block {
-				margin-bottom: 30px;
-				@media (max-width: @breakpoint-xsmall-max) {
-						margin-bottom: 15px;
-				}
-		}
+            @media (max-width: @breakpoint-xsmall-max) {
+                margin-bottom: 20px;
+            }
+        }
 
-		.uk-contact-phone {
-				font-weight: 500;
-				font-size: 22px;
-				color: @global-color;
-				display: block;
+        .uk-phone-block {
+            margin-bottom: 30px;
 
-				@media (max-width: @breakpoint-xsmall-max) {
-						font-size: 16px;
-				}
+            @media (max-width: @breakpoint-xsmall-max) {
+                margin-bottom: 15px;
+            }
+        }
 
-				&:last-child {
-						margin-bottom: 0;
-				}
+        .uk-contact-phone {
+            font-weight: 500;
+            font-size: 22px;
+            color: @global-color;
+            display: block;
 
-				&:hover {
-						color: @global-color;
-				}
-		}
+            @media (max-width: @breakpoint-xsmall-max) {
+                font-size: 16px;
+            }
 
-		.uk-working-hours {
-				font-weight: 500;
-		}
+            &:last-child {
+                margin-bottom: 0;
+            }
 
-		.uk-contact-block {
-				margin-bottom: 30px;
-		}
+            &:hover {
+                color: @global-color;
+            }
+        }
 
-		.uk-contact-site,
-		.uk-contact-email {
-				font-size: 18px;
-		}
+        .uk-working-hours {
+            font-weight: 500;
+        }
 
-		.uk-social-networks {
-				list-style: none;
-				padding-left: 0;
-				margin: 0;
-				font-weight: 500;
+        *+.uk-contact-block {
+            margin-bottom: 30px;
+        }
 
-				li {
-						// margin-bottom: 10px;
-						a {
-								display: inline-block;
-								padding: 5px 0;
-						}
-				}
-		}
-	}
+        .uk-contact-site,
+        .uk-contact-email {
+            font-size: 18px;
+        }
+
+        .uk-social-networks {
+            list-style: none;
+            padding-left: 0;
+            margin: 0;
+            font-weight: 500;
+
+            li {
+
+                // margin-bottom: 10px;
+                a {
+                    display: inline-block;
+                    padding: 5px 0;
+                }
+            }
+        }
+    }
 }
