--- a/markup/static/less/libraries/modules/viptaxi.less
+++ b/markup/static/less/libraries/modules/viptaxi.less
@@ -1,38 +1,36 @@
-.hook-card-misc() {
-
-}
+.hook-card-misc() {}
 
 .hook-section-misc() {
-  .uk-section-taxi-heading {
-    padding-top: 10px;
-  }
-  .uk-section-taxi-contacts {
-    .uk-contact-tel {
-      font-size: 24px;
-      color: @global-color;
-      font-weight: 200;
-      line-height: 1.3;
-      display: inline-block;
-
-      @media (min-width: @breakpoint-medium) {
-        font-size: 40px;
-        margin-bottom: 40px;
-      }
-    }
-    .uk-list li {
-      margin-top: 20px;
-
-      &:last-child {
-        margin-top: 20px;
-      }
+    .uk-section-taxi-heading {
+        padding-top: 50px;
     }
 
-    .uk-clarification {
-      color: @global-muted-color;
+    .uk-section-taxi-contacts {
+        .uk-contact-tel {
+            font-size: 24px;
+            color: @global-color;
+            font-weight: 200;
+            line-height: 1.3;
+            display: inline-block;
+
+            @media (min-width: @breakpoint-medium) {
+                font-size: 40px;
+                margin-bottom: 40px;
+            }
+        }
+
+        .uk-list li {
+            margin-top: 20px;
+
+            &:last-child {
+                margin-top: 20px;
+            }
+        }
+
+        .uk-clarification {
+            color: @global-muted-color;
+        }
     }
-  }
 }
 
-.hook-grid-misc() {
-
-}
+.hook-grid-misc() {}
