--- a/markup/static/less/libraries/components/feature.less
+++ b/markup/static/less/libraries/components/feature.less
@@ -1,124 +1,130 @@
 .hook-card-misc() {
-  .uk-card-feature {
-    background: linear-gradient(298.64deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%), #FBF659;
-    color: @global-color;
-    padding: 30px 20px;
-    display: flex;
-    align-items: center;
-    text-align: left;
-    box-shadow: 0px 5px 40px rgba(251, 246, 89, 0.6);
-    transition: box-shadow 0.2s;
-    border-radius: 10px;
-    
-
-    @media (min-width: @breakpoint-medium) {
-      text-align: center;
-      flex-direction: column;
-    }
-
-    // > * {
-    //   margin: 16px;
-    // }
-
-    .uk-card-icon {
-      font-size: 36px;
-      svg, img {
-        display: block;
-      }
-    }
-
-    .uk-card-title {
-      font-size: 18px;
-      font-weight: 500;
-    }
-
-    .uk-card-left {
-      flex-shrink: 0;
-      margin: 16px;
-    }
-
-    .uk-card-body {
-      padding: 0;
-    }
-
-    &:hover,
-    &:focus {
-      text-decoration: none;
-      color: @global-color;
-      box-shadow: 0px 5px 60px rgba(251, 246, 89, 0.8);
-    }
-
-    @media (max-width: @breakpoint-medium-max) {
-      // padding: 16px 10px;
-
-      > * {
-        margin: 8px;
-      }
-      
-      .uk-card-icon {
-        font-size: 40px;
-      }
-    }
-
-    @media (max-width: @breakpoint-small-max) {
-      // flex-wrap: wrap;
-      padding: 20px 25px;
-      .uk-card-title {
-        font-size: 16px;
-      }
-    }
-  }
-
-  .uk-list-features {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: fixed;
-    right: 16px;
-    z-index: 100;
-    bottom: 40px;
-    opacity: 1;
-    transition: opacity 0.2s;
-
-    > * + * {
-      margin-top: 8px;
-      @media (min-width: @breakpoint-small) {
-        margin-top: 30px;
-      }
-    }
-
-    &:not(.uk-inview) {
-      opacity: 0;
-      pointer-events: none;
-    }
-
     .uk-card-feature {
-      padding: 7px;
-      border-radius: 30px;
-
-      @media (min-width: @breakpoint-medium) {
+        background: linear-gradient(298.64deg, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 100%), #FBF659;
+        color: @global-color;
+        padding: 20px;
+        display: flex;
+        align-items: center;
         text-align: left;
-        flex-direction: row;
-      }
+        box-shadow: 0px 5px 40px rgba(251, 246, 89, 0.6);
+        transition: box-shadow 0.2s;
+        border-radius: 10px;
 
-      &:not(:hover) {
-        box-shadow: none;
+
+        @media (min-width: @breakpoint-medium) {
+            text-align: center;
+            flex-direction: column;
+        }
+
+        // > * {
+        //   margin: 16px;
+        // }
+
+        .uk-card-icon {
+            font-size: 46px;
+
+            svg,
+            img {
+                display: block;
+            }
+        }
+
+        .uk-card-title {
+            font-size: 18px;
+            font-weight: 500;
+        }
+
+        .uk-card-left {
+            flex-shrink: 0;
+            margin: 16px;
+        }
 
         .uk-card-body {
-          display: none;
+            padding: 0;
         }
-      }
-      
-      > * {
-        margin: 8px;
-      }
+
+        &:hover,
+        &:focus {
+            text-decoration: none;
+            color: @global-color;
+            box-shadow: 0px 5px 60px rgba(251, 246, 89, 0.8);
+        }
+
+        @media (max-width: @breakpoint-medium-max) {
+            // padding: 16px 10px;
+
+            >* {
+                margin: 8px;
+            }
+
+            .uk-card-icon {
+                font-size: 40px;
+            }
+        }
+
+        @media (max-width: @breakpoint-small-max) {
+            // flex-wrap: wrap;
+            padding: 20px 25px;
+
+            .uk-card-title {
+                font-size: 16px;
+            }
+        }
     }
-    .uk-card-icon {
-     font-size: 30px;
+
+    .uk-list-features {
+        display: inline-flex;
+        flex-direction: column;
+        align-items: flex-end;
+        position: fixed;
+        right: 16px;
+        z-index: 100;
+        bottom: 40px;
+        opacity: 1;
+        transition: opacity 0.2s;
+
+        >*+* {
+            margin-top: 8px;
+
+            @media (min-width: @breakpoint-small) {
+                margin-top: 30px;
+            }
+        }
+
+        &:not(.uk-inview) {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .uk-card-feature {
+            padding: 7px;
+            border-radius: 30px;
+
+            @media (min-width: @breakpoint-medium) {
+                text-align: left;
+                flex-direction: row;
+            }
+
+            &:not(:hover) {
+                box-shadow: none;
+
+                .uk-card-body {
+                    display: none;
+                }
+            }
+
+            >* {
+                margin: 8px;
+            }
+        }
+
+        .uk-card-icon {
+            font-size: 30px;
+        }
+
+        .uk-card-title {
+            font-size: 14px;
+            font-weight: normal;
+        }
     }
-    .uk-card-title {
-      font-size: 14px;
-      font-weight: normal;
-    }
-  }
 }
