--- a/markup/static/less/libraries/components/logo.less
+++ b/markup/static/less/libraries/components/logo.less
@@ -1,26 +1,48 @@
 .uk-logo {
-  display: flex;
-  flex-direction: column;
-  line-height: 1;
+    display: flex;
+    flex-direction: column;
+    line-height: 1;
 
-  @media (max-width: 479px) {
-    // max-width: 140px;
-    margin-right: 8px;
-  }
+    @media (max-width: 479px) {
+        // max-width: 140px;
+        margin-right: 8px;
+    }
+
+    svg {
+        [fill="#376BC7"] {
+            fill: #fff;
+        }
+    }
 }
+
+
+.uk-sticky-fixed.uk-active {
+    .uk-logo {
+        svg {
+            [fill="#376BC7"] {
+                fill: #376BC7;
+            }
+        }
+    }
+}
+
 .uk-logo-image {
-  margin-bottom: 8px;
-  img,
-  svg {
-    width: 110px;
-    height: 14px;
-    object-fit: contain;
-    display: block;
-  }
+    margin-bottom: 8px;
+
+    img,
+    svg {
+        width: 185px;
+        height: 24px;
+        object-fit: contain;
+        display: block;
+    }
 }
+
 .uk-logo-description {
-  font-size: 12px;
-  // color: #ACACAE;
+    font-size: 7.6px;
+    text-transform: uppercase;
+    font-family: serif;
+    // color: #ACACAE;
 }
 
 // &.uk-sticky {
@@ -31,21 +53,22 @@
 //   }
 // }
 
-.uk-hero:not(.uk-hero-default) .uk-navbar-container:not(.uk-active) {
-  .uk-logo:not(.uk-logo-default) .uk-logo-image {
-    svg * {
-      fill: currentColor;
-    }
-  }
-}
+// .uk-hero:not(.uk-hero-default) .uk-navbar-container:not(.uk-active) {
+//     .uk-logo:not(.uk-logo-default) .uk-logo-image {
+//         svg * {
+//             fill: currentColor;
+//         }
+//     }
+// }
 
 .hook-inverse() {
-  .uk-logo-description {
-    color: #fff;
-  }
-  .uk-logo:not(.uk-logo-default).uk-logo-image {
-    svg * {
-      fill: currentColor;
+    .uk-logo-description {
+        color: #fff;
     }
-  }
+
+    .uk-logo:not(.uk-logo-default).uk-logo-image {
+        svg * {
+            fill: currentColor;
+        }
+    }
 }
