--- a/markup/static/less/libraries/components/swiper.less
+++ b/markup/static/less/libraries/components/swiper.less
@@ -1,108 +1,169 @@
 .swiper-wrapper {
-  flex-wrap: nowrap;
-  margin-left: 0;
+    flex-wrap: nowrap;
+    margin-left: 0;
 }
 
 .swiper-slide {
-  height: auto;
-  background-size: cover;
-  background-position: center;
-  position: relative;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    position: relative;
 }
 
 [class*='uk-child-width'] .swiper-slide {
-  box-sizing: content-box;
+    box-sizing: content-box;
 }
 
 .swiper-slide:first-child {
-  padding-left: 0;  
+    padding-left: 0;
 }
 
 .swiper-scrollbar {
-  margin-top: 40px;
-  margin-bottom: 10px;
-  height: 4px;
-  background-color: #F1F2F4;
-  border-radius: 500px;
-  cursor: pointer;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    height: 4px;
+    background-color: #F1F2F4;
+    border-radius: 500px;
+    cursor: pointer;
 }
+
 .swiper-scrollbar-drag {
-  border-radius: inherit;
-  position: relative;
-  top: 0;
-  height: 100%;
-  background-color: #376BC7;
-  transition: all 0.2s;
+    border-radius: inherit;
+    position: relative;
+    top: 0;
+    height: 100%;
+    background-color: #376BC7;
+    transition: all 0.2s;
 }
 
 .swiper-scrollbar:hover .swiper-scrollbar-drag,
 .swiper-scrollbar:active .swiper-scrollbar-drag {
-  top: -4px;
-  height: ~'calc(100% + 8px)';
-  box-shadow: 0 0 10px fade(@global-primary-background, 40%);
+    top: -4px;
+    height: ~'calc(100% + 8px)';
+    box-shadow: 0 0 10px fade(@global-primary-background, 40%);
 }
 
 .swiper-rest {
-  color: #fff;
-  background-color: @global-primary-background;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+    color: #fff;
+    background-color: @global-primary-background;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .swiper-rest-value {
-  font-weight: 900;
-  line-height: normal;
-  font-size: 32px;
-  @media (max-width: @breakpoint-small-max) {
-    font-size: 24px;
-  }
+    font-weight: 900;
+    line-height: normal;
+    font-size: 32px;
+
+    @media (max-width: @breakpoint-small-max) {
+        font-size: 24px;
+    }
 }
 
 .swiper-rest-text {
-  font-weight: normal;
-  line-height: normal;
-  font-size: 12px;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 12px;
 }
 
 .swiper-rest:not(.swiper-rest-active) {
-  display: none !important;
+    display: none !important;
 }
 
 .uk-slideshow,
 .uk-slideshow-items {
-  &:focus {
-    outline: none;
-  }
+    &:focus {
+        outline: none;
+    }
 }
 
 .uk-slidenavs {
-  position: absolute;
-  bottom: 0;
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
-
-
-  &::before {
-    content: '';
     position: absolute;
-    right: 0;
     bottom: 0;
-    left: 0;
-    height: 96px;
-    border-radius: inherit;
-    background: linear-gradient(180deg, rgba(48, 48, 50, 0) 0%, rgba(48, 48, 50, 0.6) 100%);
-  }
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+
+
+    &::before {
+        content: '';
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 96px;
+        border-radius: inherit;
+        background: linear-gradient(180deg, rgba(48, 48, 50, 0) 0%, rgba(48, 48, 50, 0.6) 100%);
+    }
 }
 
 .uk-slidenav {
-  padding: 20px;
+    padding: 20px;
+}
+
+.swiper-pagination-bullets {
+    margin: -10px;
+    padding: 20px;
+}
+
+.swiper-pagination-bullet {
+    box-sizing: border-box;
+    display: inline-flex;
+    border: 2px solid #EAEBED;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin: 10px;
+
+    &:hover,
+    &:focus {
+        border-color: @global-primary-background;
+    }
+}
+
+.swiper-pagination-bullet-active {
+    background-color: @global-primary-background;
+    border-color: @global-primary-background;
+}
+
+.uk-swiper-main {
+
+    @media (min-width: @breakpoint-small) {
+        .swiper-pagination-bullets {
+            padding: 20px 10px 20px 0;
+            position: absolute;
+            top: 50%;
+            left: 0;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            z-index: 1;
+            background-color: #fff;
+            border-radius: 0 30px 30px 0;
+        }
+    }
+
+
+
+    .swiper-slide-image {
+        background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #C4C4C4;
+        border-radius: 10px;
+
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: inherit;
+        }
+    }
 }
