--- a/markup/static/less/libraries/modules/credit.less
+++ b/markup/static/less/libraries/modules/credit.less
@@ -1,176 +1,193 @@
 .hook-card-misc() {
-  .uk-card-credit-amount {
-    .uk-credit-amount {
-      font-size: 34px;
-      color: @background-primary-background;
-      font-weight: 500;
-      display: inline-block;
-      line-height: 1.3;
-      @media (min-width: @breakpoint-medium) {
-        font-size: 64px;
-      }
-    }
-    .uk-card-title {
-      font-size: 20px;
-      font-weight: 300;
-      margin-bottom: 5px;
-    }
-  }
-  
-  .uk-card-credit-rate {
-    font-size: 16px;
-    .uk-card-title {
-      font-size: 30px;
-      line-height: 1.2;
-      font-weight: 500;
-      @media (min-width: @breakpoint-medium) {
-        font-size: 48px;
-      }
-    }
-  }
-  
-  .uk-credit-terms-table {
-    min-width: 600px;
-    border: @global-border-width solid @global-border;
-    
-    th, td {
-      vertical-align: middle;
-      text-align: center;
-      font-size: 16px;
-      width: 25%;
-    }
-    th {
-      padding: 30px 12px;
-    }
-    td {
-      padding: 13px 12px;
-      line-height: 1.4;
-    }
-    thead {
-      border-bottom: 4px solid @global-border;
-    }
+    .uk-card-credit-amount {
+        .uk-credit-amount {
+            font-size: 34px;
+            color: @background-primary-background;
+            font-weight: 500;
+            display: inline-block;
+            line-height: 1.3;
 
-    .uk-border-large {
-      border-bottom: 4px solid @global-border; 
-    }
-  }
-
-  .uk-card-contact-person { 
-    border: 5px solid @global-border;
-    border-radius: 10px;
-    position: relative;
-
-    .uk-card-foreground {
-      padding: 20px 15px;
-      position: relative;
-      z-index: 1;
-
-      @media (min-width: @breakpoint-small) {
-        padding: 30px 35px;
-      }
-  
-      @media (min-width: @breakpoint-medium) {
-        padding: 60px 70px 70px;
-      }
-    }
-
-    .uk-card-person-position {
-      font-size: 16px !important;
-    }
-
-    .uk-contact-phone {
-      font-size: 28px;
-    }
-
-    .uk-phone-holder, .uk-phone-block, .uk-contact-block {
-      border: none;
-      margin-bottom: 0;
-    }
-
-    .uk-card-decore {
-      position: absolute;
-      top: 40%;
-      right: -15px;
-      @media (min-width: @breakpoint-small) {
-        top: 84px;
-        right: -23px;
-      }
-      svg {
-        height: auto;
-        width: 200px;
-        @media (min-width: @breakpoint-small) {
-          width: auto;
+            @media (min-width: @breakpoint-medium) {
+                font-size: 64px;
+            }
         }
-      }
-    }
-  }
 
-  .uk-card-contact-person-2 {
-    border: none;
-    .uk-card-foreground {
-      padding-left: 0;
-      padding-right: 0;
-    }
-    .uk-card-decore {
-      right: 0;
-      
-      @media (min-width: @breakpoint-small) {
-        top: 60px;
-      }
-    }
-  }
-
-  .uk-footnote-label {
-    color: @global-danger-background;
-    font-weight: 500;
-  }
-
-  .uk-list-credit-feature {
-    color: @global-muted-color;
-    @media (min-width: @breakpoint-small) {
-      display: flex;
-      flex-direction: row;
+        .uk-card-title {
+            font-size: 20px;
+            font-weight: 300;
+            margin-bottom: 5px;
+        }
     }
 
-    li {
-      @media (min-width: @breakpoint-small) {
-        margin: 0 !important;
-        padding-right: 50px;
-      }
-      &:last-child {
-        margin-top: 10px;
-      }
+    .uk-card-credit-rate {
+        font-size: 16px;
+
+        .uk-card-title {
+            font-size: 30px;
+            line-height: 1.2;
+            font-weight: 500;
+
+            @media (min-width: @breakpoint-medium) {
+                font-size: 48px;
+            }
+        }
     }
-  }
+
+    .uk-credit-terms-table {
+        min-width: 600px;
+        border: @global-border-width solid @global-border;
+
+        th,
+        td {
+            vertical-align: middle;
+            text-align: center;
+            font-size: 16px;
+            width: 25%;
+        }
+
+        th {
+            padding: 30px 12px;
+        }
+
+        td {
+            padding: 13px 12px;
+            line-height: 1.4;
+        }
+
+        thead {
+            border-bottom: 4px solid @global-border;
+        }
+
+        .uk-border-large {
+            border-bottom: 4px solid @global-border;
+        }
+    }
+
+    .uk-card-contact-person {
+        border: 5px solid @global-border;
+        border-radius: 10px;
+        position: relative;
+
+        .uk-card-foreground {
+            padding: 20px 15px;
+            position: relative;
+            z-index: 1;
+
+            @media (min-width: @breakpoint-small) {
+                padding: 30px 35px;
+            }
+
+            @media (min-width: @breakpoint-medium) {
+                padding: 60px 70px 70px;
+            }
+        }
+
+        .uk-card-person-position {
+            font-size: 16px !important;
+        }
+
+        .uk-contact-phone {
+            font-size: 28px;
+        }
+
+        .uk-phone-holder,
+        .uk-phone-block,
+        .uk-contact-block {
+            border: none;
+            margin-bottom: 0;
+        }
+
+        .uk-card-decore {
+            position: absolute;
+            top: 40%;
+            right: -15px;
+
+            @media (min-width: @breakpoint-small) {
+                top: 84px;
+                right: -23px;
+            }
+
+            svg {
+                height: auto;
+                width: 200px;
+
+                @media (min-width: @breakpoint-small) {
+                    width: auto;
+                }
+            }
+        }
+    }
+
+    .uk-card-contact-person-2 {
+        border: none;
+
+        .uk-card-foreground {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .uk-card-decore {
+            right: 0;
+
+            @media (min-width: @breakpoint-small) {
+                top: 60px;
+            }
+        }
+    }
+
+    .uk-footnote-label {
+        color: @global-danger-background;
+        font-weight: 500;
+    }
+
+    .uk-list-credit-feature {
+        color: @global-muted-color;
+
+        @media (min-width: @breakpoint-small) {
+            display: flex;
+            flex-direction: row;
+        }
+
+        li {
+            @media (min-width: @breakpoint-small) {
+                margin: 0 !important;
+                padding-right: 50px;
+            }
+
+            &:last-child {
+                margin-top: 10px;
+            }
+        }
+    }
 }
 
 .hook-section-misc() {
-  .uk-section-credit {
-    padding-top: 10px;
-    
+    .uk-section-credit {
+        padding-top: 50px;
 
-    .uk-list-credit-rates {
-      @media (min-width: @breakpoint-large) {
-        margin-left: -100px;
-      }
-      .uk-list-item {
-        @media (min-width: @breakpoint-large) {
-          padding-left: 100px;
+
+        .uk-list-credit-rates {
+            @media (min-width: @breakpoint-large) {
+                margin-left: -100px;
+            }
+
+            .uk-list-item {
+                @media (min-width: @breakpoint-large) {
+                    padding-left: 100px;
+                }
+            }
         }
-      }
     }
-  }
 
-  .uk-section-credit-terms {
-    .uk-table-block {
-      overflow-x: auto;
+    .uk-section-credit-terms {
+        .uk-table-block {
+            overflow-x: auto;
+        }
+
+        .uk-footnote-text {
+            font-size: 16px;
+        }
     }
-    .uk-footnote-text {
-      font-size: 16px;
-    }
-  }
 }
 
-.hook-grid-misc() {
-  
-}
+.hook-grid-misc() {}
