--- a/markup/static/less/libraries/modules/news.less
+++ b/markup/static/less/libraries/modules/news.less
@@ -1,148 +1,154 @@
 .hook-card-misc() {
-  .uk-card-news {
-    @media (min-width: 640px) {
-      display: flex;
-      min-height: 235px;
-    }
-
-    &:hover {
-      text-decoration: none;
-    }
-
-    .uk-card-img {
-      border-radius: 10px;
-      overflow: hidden;
-      background-color: @global-muted-color;
-      height: 235px;
-      display: block;
-      
-      @media (min-width: 640px) {
-        width: 50%;
-      }
-      @media (min-width: 960px) {
-        width: 35%;
-      }
-
-      img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        display: block;
-      }
-    }
-
-    .uk-card-title {
-      margin: 10px 0 15px;
-      font-size: 18px;
-      font-weight: 500;
-
-      a {
-        color: inherit;
+    .uk-card-news {
+        @media (min-width: 640px) {
+            display: flex;
+            min-height: 235px;
+        }
 
         &:hover {
-          text-decoration: none;
-          color: @global-link-color;
+            text-decoration: none;
         }
-      }
 
-      @media (min-width: 960px) {
-        margin-bottom: 40px;
-      }
-    }
+        .uk-card-img {
+            border-radius: 10px;
+            overflow: hidden;
+            background-color: @global-muted-color;
+            height: 235px;
+            display: block;
 
-    .uk-card-body {
-      padding: 20px 0;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+            @media (min-width: 640px) {
+                width: 50%;
+            }
 
-      @media (min-width: 640px) {
-        width: 50%;
-        padding: 20px;
-      }
+            @media (min-width: 960px) {
+                width: 35%;
+            }
 
-      @media (min-width: 960px) {
-        width: 65%;
-        padding: 45px 40px 20px;
-      }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                display: block;
+            }
+        }
 
-      &:before, &:after {
-        display: none;
-      }
+        .uk-card-title {
+            margin: 10px 0 15px;
+            font-size: 18px;
+            font-weight: 500;
 
-      .uk-card-date, .uk-card-city {
-        font-size: 12px;
-        color: @global-muted-color;
-        display: block;
-      }
-    }
-  }
+            a {
+                color: inherit;
 
-  .uk-load-more, .uk-load-more-secondary {
-    position: relative;
-    display: block;
-    z-index: 10;
-    font-size: 22px;
-    font-weight: normal;
+                &:hover {
+                    text-decoration: none;
+                    color: @global-link-color;
+                }
+            }
 
-    .uk-btn-icon {
-      display: inline-block;
-      font-size: 28px;
-      margin-right: 10px;
-      line-height: 1.2;
-      transform: rotate(0deg);
-      transform-origin: 50% ~'calc(50% + 4px)';
-      transition: transform 0.4s;
-    }
-
-    &:hover,
-    &:focus {
-      text-decoration: none;
-
-      .uk-btn-icon {
-        transform: rotate(-360deg);
-      }
-    }
-
-  }
-  
-  .uk-load-more-secondary {
-    &:after {
-      z-index: -1;
-      position: absolute;
-      content: "";
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 281px;
-      background: linear-gradient(180deg, transparent 0%, rgba(255, 255, 255, 0.7) 20%, #FFFFFF 70%);
-    }
-  }
-}
-
-.hook-section-misc() {
-  .uk-section-news-overview {
-    padding-top: 10px;
-    .uk-filter-news {
-      margin-bottom: 60px;
-    }
-  }
-}
-
-.hook-grid-misc() {
-  .uk-list-news {
-    .uk-news-item {
-      width: 100%;
-      &:nth-child(2n) {
-        .uk-card-news {
-          flex-direction: row-reverse;
+            @media (min-width: 960px) {
+                margin-bottom: 40px;
+            }
         }
 
         .uk-card-body {
-          padding-left: 0;
+            padding: 20px 0;
+            box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            @media (min-width: 640px) {
+                width: 50%;
+                padding: 20px;
+            }
+
+            @media (min-width: 960px) {
+                width: 65%;
+                padding: 45px 40px 20px;
+            }
+
+            &:before,
+            &:after {
+                display: none;
+            }
+
+            .uk-card-date,
+            .uk-card-city {
+                font-size: 12px;
+                color: @global-muted-color;
+                display: block;
+            }
         }
-      }
     }
-  }
+
+    .uk-load-more,
+    .uk-load-more-secondary {
+        position: relative;
+        display: block;
+        z-index: 10;
+        font-size: 22px;
+        font-weight: normal;
+
+        .uk-btn-icon {
+            display: inline-block;
+            font-size: 28px;
+            margin-right: 10px;
+            line-height: 1.2;
+            transform: rotate(0deg);
+            transform-origin: 50% ~'calc(50% + 4px)';
+            transition: transform 0.4s;
+        }
+
+        &:hover,
+        &:focus {
+            text-decoration: none;
+
+            .uk-btn-icon {
+                transform: rotate(-360deg);
+            }
+        }
+
+    }
+
+    .uk-load-more-secondary {
+        &:after {
+            z-index: -1;
+            position: absolute;
+            content: "";
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 281px;
+            background: linear-gradient(180deg, transparent 0%, rgba(255, 255, 255, 0.7) 20%, #FFFFFF 70%);
+        }
+    }
+}
+
+.hook-section-misc() {
+    .uk-section-news-overview {
+        padding-top: 50px;
+
+        .uk-filter-news {
+            margin-bottom: 60px;
+        }
+    }
+}
+
+.hook-grid-misc() {
+    .uk-list-news {
+        .uk-news-item {
+            width: 100%;
+
+            &:nth-child(2n) {
+                .uk-card-news {
+                    flex-direction: row-reverse;
+                }
+
+                .uk-card-body {
+                    padding-left: 0;
+                }
+            }
+        }
+    }
 }
