--- a/markup/static/less/libraries/modules/souvenir.less
+++ b/markup/static/less/libraries/modules/souvenir.less
@@ -1,56 +1,58 @@
 .hook-card-misc() {
-  .uk-card-souvenir {
-    color: @global-color;
-    font-size: 12px;
+    .uk-card-souvenir {
+        color: @global-color;
+        font-size: 12px;
 
-    &[href] {
-      text-decoration: none;
-      &:hover {
-        text-decoration: none;
-        .uk-card-title {
-          color: @global-link-hover-color;
+        &[href] {
+            text-decoration: none;
+
+            &:hover {
+                text-decoration: none;
+
+                .uk-card-title {
+                    color: @global-link-hover-color;
+                }
+            }
         }
-      }
+
+        .uk-card-img {
+            height: 210px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .uk-card-body {
+            padding: 0;
+        }
+
+        .uk-souvenir-brand {
+            color: @global-muted-color;
+            font-weight: 500;
+        }
+
+        .uk-card-title {
+            font-size: 16px;
+            margin: 10px 0;
+            font-weight: 500;
+        }
     }
 
-    .uk-card-img {
-      height: 210px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .uk-card-body {
-      padding: 0;
-    }
-
-    .uk-souvenir-brand {
-      color: @global-muted-color;
-      font-weight: 500;
-    }
-
-    .uk-card-title {
-      font-size: 16px;
-      margin: 10px 0;
-      font-weight: 500;
-    }
-  }
-  
 }
 
 .hook-section-misc() {
-  .uk-section-souvenirs {
-    padding-top: 10px;
-    .uk-filter-souvenirs {
-      width: 100%;
+    .uk-section-souvenirs {
+        padding-top: 50px;
+
+        .uk-filter-souvenirs {
+            width: 100%;
+        }
+
+        .uk-section-description {
+            color: @global-muted-color;
+            font-size: 16px;
+        }
     }
-    .uk-section-description {
-      color: @global-muted-color;
-      font-size: 16px;
-    }
-  }
 }
 
-.hook-grid-misc() {
-
-}
+.hook-grid-misc() {}
